adding pop up window narrow nav bar

--- a/college-bias-project.html
+++ b/college-bias-project.html
@@ -39,7 +39,7 @@
             <p>Engaging in this project on algorithmic bias has provided me with a new perspective on the implications of AI in our society. While all of the attention currently seems to be on the powerful capabilites of AI, the importance of understanding how and why our models are just as, if not more, important than what it can do. This project provided a snapshot into that framework.</p>
             <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
 
-            <p>The code and Powerpoint materials for this project can be found on my <a href="https://github.com/nurayyozden/Higher-Education-Algorithm-Exploration">GitHub</a>.</p>
+            <p>The code and Powerpoint materials for this project can be found on my <a target="_blank" class="github-embed" href="https://github.com/nurayyozden/Higher-Education-Algorithm-Exploration">GitHub</a>.</p>
           </div>
       </div>
 
