adding spotify project page

--- a/projects.html
+++ b/projects.html
@@ -20,24 +20,28 @@
     <!-- Main content -->
     <div class="pe-container">
 
-     <!-- Image source: https://unsplash.com/s/photos/college-campus -->
         <div class="pe-box">
             <a href="college-bias-project.html">
             <h3 class="pe-title">Higher Education Selectivity & Racial Bias</h3>
             <p class="pe-time">Spring 2024</p>
             </a>
-            <!-- <img class="cover-image" src="uploads/college.jpeg" -->
             
         </div>
 
-    <!-- Image Source: https://xochil.com/posts/fitting-safely-during-coronavirus -->  
         <div class="pe-box">
             <a href="garment-ai-project.html">
             <h3 class="pe-title">Garment Fit & AI Project</h3>
             <p class="pe-time">Spring 2024</p>
             </a>
-            <!-- <img class="cover-image" src="uploads/fashion.jpeg" -->
-            <!-- alt="fashion image"> -->
+
+        </div>
+
+        <div class="pe-box">
+            <a href="spotify-project.html">
+            <h3 class="pe-title">Spotify Music Project</h3>
+            <p class="pe-time">Fall 2023</p>
+            </a>
+
         </div>
 
 
@@ -46,7 +50,6 @@
             <h3 class="pe-title">Turkey Earthquake Project</h3>
             <p class="pe-time">Summer 2023</p>
             </a>
-            <!-- <img class="cover-image" src="uploads/earthquake.jpeg" -->
         </div>
 
     </div>
