adding description of garment ai project

--- a/experiences.html
+++ b/experiences.html
@@ -21,6 +21,7 @@
     <!-- Main content -->
     <div class="pe-container">
 
+
         <div class="pe-box">
             <a href="cox-experience.html">
             <h3 class="pe-title">Business Analyst Intern</h3>
@@ -31,7 +32,7 @@
 
         <div class="pe-box">
             <a href="hbl-experience.html">
-            <h3 class="pe-title">Technology Correspondant RA</h3>
+            <h3 class="pe-title">Research Assistant: Health Behaviors Lab</h3>
             <p class="pe-time">Fall 2022 - Spring 2024</p>
             </a>
             <!-- <img class="cover-image" src="uploads/hbl_logo.png" -->
