--- a/garment-ai-project.html
+++ b/garment-ai-project.html
@@ -25,11 +25,19 @@
         <div class="pe-left">
             <h2 class="pe-title">Garmet Fit & AI Project</h2>
             <h4 class="pe-company">Research Project</h4>
-            <p class="pe-time">Spring 2024</p>
+            <p class="pe-time">Spring 2024 - Summer 2024</p>
           </div>
 
           <div class="pe-right">
-            <p class="pe-description">Coming soon...</p>
+            <p class="pe-description">It was my senior year at Cornell where I realized two things: one, that I love research, and found myself getting involved in various projects at my Health Behviors Lab as much as I could; and two, that it was possible to combine my passion - fashion and style - with my educational background - computer science and machine learning. I began exploring different paths that combine these two fields, and as my senior year was coming to a close, I found Professor Fatma Baytar and PhD student Mona Maher and joined their research project.</p>
+            <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
+
+            <p class="pe-description">Mona and I collaborated to author the research paper titled <i>Developing Machine Learning Models to Predict Garment Fit Using 3D Simulation Software</i>. In this project, I was responsible for researching and selecting suitable machine learning models, writing the code for implementation, cleaning and transforming the data, summarizing the results, and creating visualizations to present our findings effectively. It is currently awaiting submissions to conferences and/or journals.</p>
+            <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
+
+            <p class="pe-description">Through this experience, I was able to refine my technical skills and understand how computer science can better our interactions and understanding of garments and fashion. It provided valuable insights into the future of AI in the fashion industry, and was a catalyst for my pursuit of a PhD at the intersection of computer science, fashion, and business.
+            </p>
+
           </div>
       </div>
 
