--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <img class="home-img" id="profile-pic" src="uploads/beach_pic.jpeg" alt="Nuray image">
             <h1 id="hi">HI, I'M NURAY.</h1>
             <p class="pronounce"><a target="_blank" class="text-link" href="https://www.youtube.com/watch?v=bR_JdRyhGKI">how do I pronounce that?</a></p>
-            <h2 class="hi2">STUDENT / ENGINEER / RESEARCHER / COMPUTER SCIENTIST / CREATOR</h2>
+            <h2 class="hi2"> ENGINEER / RESEARCHER / COMPUTER SCIENTIST / CREATOR</h2>
 
 
         </div>
@@ -92,7 +92,7 @@
 
 
             <div class="intro-text oval">
-            <p>I'm a current senior at Cornell University studying Information Science, Systems and Technology with a concentration in Data Science. I love coding, design, and exploring new technologies to solve real-world problems. </p>
+            <p>I'm a recent graduate of Cornell University, where I majored in Information Science, Systems and Technology with a concentration in Data Science. I love coding, design, and exploring new technologies to solve real-world problems. </p>
             </div>
 
             <img class="computer-svg" src="uploads/computer.svg" alt="Computer GIF">
