--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,14 @@
     <div class="pe-container">
 
         <div class="pe-box">
+            <a href="garment-ai-project.html">
+            <h3 class="pe-title">Garment Fit & AI Research Paper</h3>
+            <p class="pe-time">Spring 2024 - Summer 2024</p>
+            </a>
+
+        </div>
+
+        <div class="pe-box">
             <a href="college-bias-project.html">
             <h3 class="pe-title">Higher Education Selectivity & Racial Bias</h3>
             <p class="pe-time">Spring 2024</p>
@@ -28,13 +36,6 @@
             
         </div>
 
-        <div class="pe-box">
-            <a href="garment-ai-project.html">
-            <h3 class="pe-title">Garment Fit & AI Project</h3>
-            <p class="pe-time">Spring 2024</p>
-            </a>
-
-        </div>
 
         <div class="pe-box">
             <a href="spotify-project.html">
