--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <img class="home-img" id="profile-pic" src="uploads/beach_pic.jpeg" alt="Nuray image">
             <h1 id="hi">HI, I'M NURAY.</h1>
             <p class="pronounce"><a target="_blank" class="text-link" href="https://www.youtube.com/watch?v=bR_JdRyhGKI">how do I pronounce that?</a></p>
-            <h2 class="hi2"> ENGINEER / RESEARCHER / COMPUTER SCIENTIST / CREATOR</h2>
+            <h2 class="hi2"> SOLUTION ENGINEER / RESEARCHER / COMPUTER SCIENTIST / CREATOR</h2>
 
 
         </div>
@@ -92,7 +92,7 @@
 
 
             <div class="intro-text oval">
-            <p>I'm a recent graduate of Cornell University, where I majored in Information Science, Systems and Technology with a concentration in Data Science. I love coding, design, and exploring new technologies to solve real-world problems. </p>
+            <p>I am a Solution Engineer at <a target="_blank" class="text-link" href="https://appian.com">Appian</a> in the Integration and Design team, where I tackle technical problems our customers face with the platform. I am a Cornell University alum, where I majored in Information Science, Systems and Technology with a concentration in Data Science. I love coding, design, and exploring new technologies to solve real-world problems. </p>
             </div>
 
             <img class="computer-svg" src="uploads/computer.svg" alt="Computer GIF">
@@ -132,7 +132,7 @@
                     <div class="skills-group">
                         <div class="skills-icon"><span class="material-symbols-outlined">deployed_code</span></div>
                         <h4>Software Development</h4>
-                        <p>I have experience coding in Python, SQL, Java, HTML, PHP, and JavaScript. I have applied these tools 
+                        <p>I have experience coding in Python, SQL, Java, HTML, PHP, and JavaScript, as well as working with Linux and Windows operating systems. I have applied these tools 
                             in website development and design, database management, backend programming, frontend scripting, and data analysis.
                         </p>
                     </div>
@@ -158,7 +158,7 @@
                         <div class="skills-icon"><span class="material-symbols-outlined">voice_selection</span></div>
                         <h4>Communication</h4>
                         <p>I believe that the most important attribute that an engineer can have is the ability to communicate their knowledge.
-                            Whether presenting findings in academic settings or collaborating with interdisciplinary teams, I strive to foster understanding through effective communication. </p>
+                            Whether explaining a technical issue to a customer, presenting findings in academic settings or collaborating with interdisciplinary teams, I strive to foster understanding through effective communication. </p>
                     </div>
                     <div class="skills-group">
                         <div class="skills-icon"><span class="material-symbols-outlined">brush</span></div>
