adding appian to experiences.html

--- a/experiences.html
+++ b/experiences.html
@@ -21,6 +21,13 @@
     <!-- Main content -->
     <div class="pe-container">
 
+        <div class="pe-box">
+            <a href="appian-experience.html">
+            <h3 class="pe-title">Solution Engineer</h3>
+            <p class="pe-time">October 2024 - present</p>
+            </a>
+            <!-- <img class="cover-image" src="uploads/cox_logo.png" -->
+        </div>
 
         <div class="pe-box">
             <a href="cox-experience.html">
