adding appian work description

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
             <div class="intro-text oval">
-            <p>I am a Solution Engineer at <a target="_blank" class="text-link" href="https://appian.com">Appian</a> in the Integration and Design team, where I tackle technical problems our customers face with the platform. I am a Cornell University alum, where I majored in Information Science, Systems and Technology with a concentration in Data Science. I love coding, design, and exploring new technologies to solve real-world problems. </p>
+            <p>I am a Solution Engineer at <a target="_blank" class="text-link" href="https://appian.com">Appian</a> where I tackle technical problems our customers face with the platform. I am a Cornell University alum, where I majored in Information Science, Systems and Technology with a concentration in Data Science. I love coding, design, and exploring new technologies to solve real-world problems. </p>
             </div>
 
             <img class="computer-svg" src="uploads/computer.svg" alt="Computer GIF">
