fixing appian pic again

--- a/appian-experience.html
+++ b/appian-experience.html
@@ -28,7 +28,7 @@
             <h2 class="pe-title">Solution Engineer</h2>
             <h4 class="pe-company">Appian</h4>
             <p class="pe-time">October 2024 - present</p>
-           <img class="pe-second-image" src="uploads/appian_pic.jpg"> 
+           <img class="pe-second-image" src="uploads/appian_pic.jpeg"> 
           </div>
 
           <div class="pe-right">
