updated home content, formatting

--- a/index.html
+++ b/index.html
@@ -79,16 +79,23 @@
     <body class="body-home" id="body-home">
 
 
-        <div class="home-content">
-            <img class="home-img" id="profile-pic" src="uploads/beach_pic.jpeg" alt="Nuray image">
-            <h1 id="hi">HI, I'M NURAY.</h1>
-            <p class="pronounce"><a target="_blank" class="text-link" href="https://www.youtube.com/watch?v=bR_JdRyhGKI">how do I pronounce that?</a></p>
-            <h2 class="hi2"> SOLUTION ENGINEER / RESEARCHER / COMPUTER SCIENTIST / CREATOR</h2>
+    <div class="home-content">
+    <div class="home-text">
+        <h1 id="hi">HI, I'M NURAY.</h1>
+        <p class="pronounce">
+        <a target="_blank" class="text-link" href="https://www.youtube.com/watch?v=bR_JdRyhGKI">
+            how do I pronounce that?
+        </a>
+        </p>
+        <h2 class="hi2">
+        SOLUTION ENGINEER / RESEARCHER / COMPUTER SCIENTIST / CREATOR
+        </h2>
+    </div>
 
+    <img class="home-img" id="profile-pic" src="uploads/beach_pic.jpeg" alt="Nuray image">
+    </div>
 
-        </div>
-
-        <div class="introduction">
+        <!-- <div class="introduction">
 
 
             <div class="intro-text oval">
@@ -97,7 +104,7 @@
 
             <img class="computer-svg" src="uploads/computer.svg" alt="Computer GIF">
 
-        </div>
+        </div> -->
         
     <div id="projects-anchor"></div>
 
@@ -106,15 +113,15 @@
 
     <!-- New section: no images -->
     <div class="pe-section" >
-        <div class="brushstroke">
+        <!-- <div class="brushstroke">
             <img id="brush1" src="uploads/brush_stroke.svg" alt="brush_stroke">
-        </div>
+        </div> -->
         <h1 class="pe-h1" id="proj-header">
             <a class="pe-header" href="projects.html">Projects</a>
         </h1>
-        <div class="brushstroke">
+        <!-- <div class="brushstroke">
             <img id="brush2" src="uploads/brush_stroke.svg" alt="brush_stroke">
-        </div>
+        </div> -->
         <h1 class="pe-h1" id="exp-header">
             <a class="pe-header" href="experiences.html">Experiences</a>
         </h1>
