fixing projects and experiences formatting on home page

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </a>
         </p>
         <h2 class="hi2">
-        SOLUTION ENGINEER / RESEARCHER / COMPUTER SCIENTIST / CREATOR
+        I am a solution engineer at Appian, and a recent Cornell graduate from the College of Engineering ...
         </h2>
     </div>
 
@@ -113,18 +113,103 @@
 
     <!-- New section: no images -->
     <div class="pe-section" >
-        <!-- <div class="brushstroke">
-            <img id="brush1" src="uploads/brush_stroke.svg" alt="brush_stroke">
-        </div> -->
-        <h1 class="pe-h1" id="proj-header">
-            <a class="pe-header" href="projects.html">Projects</a>
-        </h1>
-        <!-- <div class="brushstroke">
-            <img id="brush2" src="uploads/brush_stroke.svg" alt="brush_stroke">
-        </div> -->
-        <h1 class="pe-h1" id="exp-header">
-            <a class="pe-header" href="experiences.html">Experiences</a>
-        </h1>
+        <!-- Projects column -->
+         <div class="pe-column">
+            <h1 class="pe-h1" id="proj-header">
+                <a class="pe-header" >Projects</a>
+            </h1>
+
+               <div class="pe-container">
+
+                    <div class="pe-box">
+                        <a href="garment-ai-project.html">
+                        <h3 class="pe-title">Garment Fit & AI Research Paper</h3>
+                        <p class="pe-time">Spring 2024 - Summer 2024</p>
+                        </a>
+
+                    </div>
+
+                    <div class="pe-box">
+                        <a href="college-bias-project.html">
+                        <h3 class="pe-title">Higher Education Selectivity & Racial Bias</h3>
+                        <p class="pe-time">Spring 2024</p>
+                        </a>
+                        
+                    </div>
+
+
+                    <div class="pe-box">
+                        <a href="spotify-project.html">
+                        <h3 class="pe-title">Spotify Music Project</h3>
+                        <p class="pe-time">Fall 2023</p>
+                        </a>
+
+                    </div>
+
+
+                    <div class="pe-box">
+                        <a href="turkey-earthquake-project.html">
+                        <h3 class="pe-title">Turkey Earthquake Project</h3>
+                        <p class="pe-time">Summer 2023</p>
+                        </a>
+                    </div>
+
+                </div>
+             </div>
+        <!-- Experiences column -->
+         <div class="pe-column">
+            <h1 class="pe-h1" id="exp-header">
+                <a class="pe-header">Experiences</a>
+            </h1>
+
+                <div class="pe-container">
+
+                    <div class="pe-box">
+                        <a href="appian-experience.html">
+                        <h3 class="pe-title">Solution Engineer</h3>
+                        <p class="pe-time">October 2024 - present</p>
+                        </a>
+                        <!-- <img class="cover-image" src="uploads/cox_logo.png" -->
+                    </div>
+
+                    <div class="pe-box">
+                        <a href="cox-experience.html">
+                        <h3 class="pe-title">Business Analyst Intern</h3>
+                        <p class="pe-time">Summer 2023</p>
+                        </a>
+                        <!-- <img class="cover-image" src="uploads/cox_logo.png" -->
+                    </div>
+
+                    <div class="pe-box">
+                        <a href="hbl-experience.html">
+                        <h3 class="pe-title">Research Assistant: Health Behaviors Lab</h3>
+                        <p class="pe-time">Fall 2022 - Spring 2024</p>
+                        </a>
+                        <!-- <img class="cover-image" src="uploads/hbl_logo.png" -->
+
+                    </div>
+
+                    <div class="pe-box">
+                        <a href="l60-experience.html">
+                        <h3 class="pe-title">Computer Science RA</h3>
+                        <p class="pe-time">Summer 2022</p>
+                        </a>
+                        <!-- <img class="cover-image" src="uploads/level60_logo.png"
+                        alt="level60 image"></a> -->
+                    </div>
+
+                    <div class="pe-box">
+                        <a href="medstar-experience.html">
+                        <h3 class="pe-title">Data Analytics Research Intern</h3>
+                        <p class="pe-time">Summer 2021</p>
+                        </a>
+                        <!-- <img class="cover-image" src="uploads/medstar_logo.png"
+                        alt="medstar image"></a> -->
+                    </div>
+                </div>
+
+    </div>
+
     </div>
 
 
