--- a/college-bias-project.html
+++ b/college-bias-project.html
@@ -16,7 +16,7 @@
 
     <!-- Header -->
     <header>
-        <a href="projects.html" class="back-button">Back</a>
+        <a href="index.html#projects-anchor" class="back-button">Back</a>
     </header>
 
     <div class="pe-wrapper">
