--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
                     <div class="pe-box">
                         <a href="college-bias-project.html">
-                        <h3 class="pe-title">Higher Education Selectivity & Racial Bias</h3>
+                        <h3 class="pe-title">Higher Education Selectivity & Racial Bias Project</h3>
                         <p class="pe-time">Spring 2024</p>
                         </a>
                         
@@ -191,7 +191,7 @@
 
                     <div class="pe-box">
                         <a href="l60-experience.html">
-                        <h3 class="pe-title">Computer Science RA</h3>
+                        <h3 class="pe-title">Research Assistant: Level60 Consulting</h3>
                         <p class="pe-time">Summer 2022</p>
                         </a>
                         <!-- <img class="cover-image" src="uploads/level60_logo.png"
@@ -333,7 +333,7 @@
     </div>
 </div>
     <div class="footer-bottom">
-        <p>&copy; 2024 Nuray Ozden.  All rights reserved.</p>
+        <p>&copy; 2025 Nuray Ozden.  All rights reserved.</p>
     </div>
 </footer>
 
