--- a/l60-experience.html
+++ b/l60-experience.html
@@ -16,7 +16,7 @@
 
     <!-- Header -->
     <header>
-        <a href="experiences.html" class="back-button">Back</a>
+        <a href="index.html#projects-anchor" class="back-button">Back</a>
     </header>
 
     <div class="pe-wrapper">
@@ -24,7 +24,7 @@
 
       <div class="pe-details">
         <div class="pe-left">
-            <h2 class="pe-title">Computer Science RA</h2>
+            <h2 class="pe-title">Research Assistant: Level60 Consulting</h2>
             <h4 class="pe-company">Dr. Chris Anderson & Level60 Consulting</h4>
             <p class="pe-time">Summer 2022</p>
           </div>
