--- a/medstar-experience.html
+++ b/medstar-experience.html
@@ -17,7 +17,7 @@
 
     <!-- Header -->
     <header>
-        <a href="experiences.html" class="back-button">Back</a>
+        <a href="index.html#projects-anchor" class="back-button">Back</a>
     </header>
 
     <div class="pe-wrapper">
