--- a/turkey-earthquake-project.html
+++ b/turkey-earthquake-project.html
@@ -13,10 +13,11 @@
 
 
 <body class="body-pe">
+  <div id="vanta-bg"></div>
 
     <!-- Header -->
     <header>
-        <a href="projects.html" class="back-button">Back</a>
+        <a href="index.html#projects-anchor" class="back-button">Back</a>
     </header>
 
     <div class="pe-wrapper">
