--- a/experiences.html
+++ b/experiences.html
@@ -14,7 +14,7 @@
 <body class="body-pe">
     <!-- Header -->
     <header>
-        <a href="index.html" class="back-button">Back</a>
+        <a href="index.html#projects-anchor" class="back-button">Back</a>
         <h1>Experiences</h1>
     </header>
 
