--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
 <body class="body-pe">
     <!-- Header -->
     <header>
-        <a href="index.html" class="back-button">Back</a>
+        <a href="index.html#projects-anchor" class="back-button">Back</a>
         <h1>Projects</h1>
     </header>
 
