--- a/garment-ai-project.html
+++ b/garment-ai-project.html
@@ -14,6 +14,7 @@
 
 
 <body class="body-pe">
+  <div id="vanta-bg"></div>
 
     <!-- Header -->
     <header>
@@ -51,7 +52,7 @@
 <script src="scripts/vanta.net.min.js"></script>
 <script>
 VANTA.NET({
-el: "html",
+  el: "#vanta-bg",
 mouseControls: true,
 touchControls: true,
 gyroControls: false,
