--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <script src="scripts/vanta.net.min.js"></script>
         <script>
         VANTA.NET({
-        el: "html",
+          el: "#vanta-bg",
         mouseControls: true,
         touchControls: true,
         gyroControls: false,
