--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,8 @@
 </head>
 
 <body class="body-pe">
+      <div id="vanta-bg"></div>
+
     <!-- Header -->
     <header>
         <a href="index.html#projects-anchor" class="back-button">Back</a>
@@ -60,7 +62,7 @@
     <script src="scripts/vanta.net.min.js"></script>
     <script>
     VANTA.NET({
-    el: "html",
+      el: "#vanta-bg",
     mouseControls: true,
     touchControls: true,
     gyroControls: false,
