--- a/experiences.html
+++ b/experiences.html
@@ -12,6 +12,8 @@
 </head>
 
 <body class="body-pe">
+      <div id="vanta-bg"></div>
+
     <!-- Header -->
     <header>
         <a href="index.html#projects-anchor" class="back-button">Back</a>
@@ -73,7 +75,7 @@
 <script src="scripts/vanta.net.min.js"></script>
 <script>
 VANTA.NET({
-el: "html",
+  el: "#vanta-bg",
 mouseControls: true,
 touchControls: true,
 gyroControls: false,
