--- a/hbl-experience.html
+++ b/hbl-experience.html
@@ -13,6 +13,7 @@
 
 
 <body class="body-pe">
+  <div id="vanta-bg"></div>
 
     <!-- Header -->
     <header>
@@ -54,7 +55,7 @@
   <script src="scripts/vanta.net.min.js"></script>
   <script>
   VANTA.NET({
-  el: "html",
+    el: "#vanta-bg",
   mouseControls: true,
   touchControls: true,
   gyroControls: false,
