--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
     </div>
 
     <body class="body-home" id="body-home">
+      <div id="vanta-bg"></div>
+
 
 
     <div class="home-content">
@@ -278,7 +280,7 @@
         <script src="scripts/vanta.net.min.js"></script>
         <script>
         VANTA.NET({
-          el: "#vanta-bg",
+        el: "#vanta-bg",
         mouseControls: true,
         touchControls: true,
         gyroControls: false,
