sewing project page

--- a/college-bias-project.html
+++ b/college-bias-project.html
@@ -26,7 +26,7 @@
       <div class="pe-details">
         <div class="pe-left">
             <h2 class="pe-title">Higher Education Selectivity & Racial Bias</h2>
-            <h4 class="pe-company">Algorithm Audit Project</h4>
+            <h4 class="pe-company">Collaborative Project</h4>
             <p class="pe-time">Spring 2024</p>
           </div>
 
@@ -52,7 +52,7 @@
 <script src="scripts/vanta.net.min.js"></script>
 <script>
 VANTA.NET({
-  el: "#vanta-bg",
+el: "#vanta-bg",
 mouseControls: true,
 touchControls: true,
 gyroControls: false,
