--- a/index.html
+++ b/index.html
@@ -123,6 +123,14 @@
 
                <div class="pe-container">
 
+                 <div class="pe-box">
+                        <a href="sewing-pattern-project.html">
+                        <h3 class="pe-title">Sewing Pattern Project</h3>
+                        <p class="pe-time">Fall 2025 - present</p>
+                        </a>
+
+                    </div>
+
                     <div class="pe-box">
                         <a href="garment-ai-project.html">
                         <h3 class="pe-title">Garment Fit & AI Research Paper</h3>
