--- a/garment-ai-project.html
+++ b/garment-ai-project.html
@@ -27,7 +27,7 @@
       <div class="pe-details">
         <div class="pe-left">
             <h2 class="pe-title">Garmet Fit & AI Project</h2>
-            <h4 class="pe-company">Research Project</h4>
+            <h4 class="pe-company">Collaborative Project</h4>
             <p class="pe-time">Spring 2024 - Summer 2024</p>
           </div>
 
@@ -52,7 +52,7 @@
 <script src="scripts/vanta.net.min.js"></script>
 <script>
 VANTA.NET({
-  el: "#vanta-bg",
+el: "#vanta-bg",
 mouseControls: true,
 touchControls: true,
 gyroControls: false,
