fixing sticky header

--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
         menu
     </span>
 
-    </header>
+</header>
 
-        <!-- nav bar window for narrow screen -->
-
+  <!-- nav bar window for narrow screen -->
     <div id="navOverlay">
         <div id="navContent">
             <span id="closeNav">&times;</span>
@@ -77,9 +76,6 @@
     </div>
 
     <body class="body-home" id="body-home">
-      <div id="vanta-bg"></div>
-
-
 
     <div class="home-content">
     <div class="home-text">
@@ -288,7 +284,7 @@
         <script src="scripts/vanta.net.min.js"></script>
         <script>
         VANTA.NET({
-        el: "#vanta-bg",
+        el: "html",
         mouseControls: true,
         touchControls: true,
         gyroControls: false,
