fixing years in Research box

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     <div class="skills-group">
                         <div class="skills-icon"><span class="material-symbols-outlined">person_search</span></div>
                         <h4>Research</h4>
-                        <p>Over the last 3 years, I have joined numerous research projects. The research process has opened up a new window of thinking, and has deepened my understanding 
+                        <p>Over the last five years, I have joined numerous research projects. The research process has opened up a new window of thinking, and has deepened my understanding 
                             of how technology and information science can be utilized to create new connections.</p>
                     </div>
                 </div>
