--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
             how do I pronounce that?
         </a>
         </p>
-        <h2 class="hi2">
-        I am a solution engineer at Appian, and a recent Cornell graduate from the College of Engineering ...
-        </h2>
+        <p class="hi2">I am a Solution Engineer at <a target="_blank" class="text-link" href="https://appian.com">Appian</a>, where I support and troubleshoot our platform.</p>
+        <p class="hi2">I graduated from Cornell University's College of Engineering in 2024, where I studied <a target="_blank" class="text-link" href="https://infosci.cornell.edu/bachelor-science-information-science-systems-and-technology">ISST</a>. My primary concentration was Data Science, and my secondary concentration was in UI/UX.</p>
+        <p class="hi2">I’m passionate about blending computer science tools, design, and creativity to build innovative, sustainable solutions for the future, especially concerning our fashion and textile industry.</p>
     </div>
 
     <img class="home-img" id="profile-pic" src="uploads/beach_pic.jpeg" alt="Nuray image">
