--- a/index.html
+++ b/index.html
@@ -93,23 +93,11 @@
     <img class="home-img" id="profile-pic" src="uploads/beach_pic.jpeg" alt="Nuray image">
     </div>
 
-        <!-- <div class="introduction">
-
-
-            <div class="intro-text oval">
-            <p>I am a Solution Engineer at <a target="_blank" class="text-link" href="https://appian.com">Appian</a> in the Integration and Design team, where I tackle technical problems our customers face with the platform. I am a Cornell University alum, where I majored in Information Science, Systems and Technology with a concentration in Data Science. I love coding, design, and exploring new technologies to solve real-world problems. </p>
-            </div>
-
-            <img class="computer-svg" src="uploads/computer.svg" alt="Computer GIF">
-
-        </div> -->
         
     <div id="projects-anchor"></div>
 
 
 
-
-    <!-- New section: no images -->
     <div class="pe-section" >
         <!-- Projects column -->
          <div class="pe-column">
@@ -220,7 +208,7 @@
 
 
         <!-- New skills section -->
-        <div class="skills-section" id="skills-anchor">
+    <div class="skills-section" id="skills-anchor">
             <h1 class="home-title-header">Skills</h1>
 
             <!-- MAYBE ADD LEADERSHIP???? -->
@@ -274,7 +262,19 @@
                 </div>
             </div>
 
+    </div>
+
+    <!-- New section -- fun -->
+    <div class="skills-section" id="fun-anchor">
+        <!-- <h2 class="home-title-header">Fun</h2> -->
+
+        <div class="fun-things">
+
+            <p>In my free time, I love to crochet! Here are some of my recent projects:</p>
         </div>
+
+    </div>
+
 
 
         <!-- Background effects
