fix footer, remove fun section for now

--- a/index.html
+++ b/index.html
@@ -265,15 +265,14 @@
     </div>
 
     <!-- New section -- fun -->
-    <div class="skills-section" id="fun-anchor">
-        <!-- <h2 class="home-title-header">Fun</h2> -->
+    <!-- <div class="skills-section" id="fun-anchor">
 
         <div class="fun-things">
 
             <p>In my free time, I love to crochet! Here are some of my recent projects:</p>
         </div>
 
-    </div>
+    </div> -->
 
 
 
