--- a/sewing-pattern-project.html
+++ b/sewing-pattern-project.html
@@ -38,8 +38,12 @@
             <p class="pe-description">By combining image recognition and pattern-matching logic that is derived from fitting shapes within a larger shape, the tool aims to empower users—especially beginners and DIY enthusiasts—to give their garments a second life rather than discarding them. The final output could include links to downloadable patterns, estimated fabric yield, and styling suggestions based on the original garment. The crux of this project is connecting all of the pieces of this process, from image extraction, mesuring the relative size, finding the best pattern given the clothing item, and presenting it in a user-friendly manner.</p>
             <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
 
-            <p class="pe-description">While this project is still in the initial stages, I am excited about combining all of these different elements to create a seamless process, promoting sustainability on an individual level. To see what stage the proejct is at, take a look at my <a target="_blank" class="github-embed" href="https://github.com/nurayyozden/Sewing-Pattern-Project">GitHub</a>!</p>
+            <p class="pe-description">While this project is still in the initial stages, I am excited about combining all of these different elements to create a seamless process, promoting sustainability on an individual level. To see what stage the project is at, take a look at my <a target="_blank" class="github-embed" href="https://github.com/nurayyozden/Sewing-Pattern-Project">GitHub</a>!</p>
             </p>
+<!-- 
+            <img src="uploads/test_shirt.jpg"></img>
+            <img src="uploads/test_shirt_after.jpg"></img> -->
+
 
           </div>
       </div>
