adding sewing project images

--- a/sewing-pattern-project.html
+++ b/sewing-pattern-project.html
@@ -29,23 +29,28 @@
             <h2 class="pe-title">Sewing Pattern Project</h2>
             <h4 class="pe-company">Individual Project</h4>
             <p class="pe-time">Fall 2025 - present</p>
-          </div>
+        </div>
 
-          <div class="pe-right">
-            <p class="pe-description">This personal project is a creative fusion of sustainability, fashion, and technology. The goal is to design and build an interactive interface where users can upload an image of an old or unused piece of clothing (e.g., a shirt, dress, or jeans), and receive personalized sewing pattern suggestions for upcycling it into a new, wearable item.</p>
-            <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
+        <div class="pe-right">
+              <p class="pe-description">This personal project is a creative fusion of sustainability, fashion, and technology. The goal is to design and build an interactive interface where users can upload an image of an old or unused piece of clothing (e.g., a shirt, dress, or jeans), and receive personalized sewing pattern suggestions for upcycling it into a new, wearable item.</p>
+              <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
 
-            <p class="pe-description">By combining image recognition and pattern-matching logic that is derived from fitting shapes within a larger shape, the tool aims to empower users—especially beginners and DIY enthusiasts—to give their garments a second life rather than discarding them. The final output could include links to downloadable patterns, estimated fabric yield, and styling suggestions based on the original garment. The crux of this project is connecting all of the pieces of this process, from image extraction, mesuring the relative size, finding the best pattern given the clothing item, and presenting it in a user-friendly manner.</p>
-            <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
+              <p class="pe-description">By combining image recognition and pattern-matching logic that is derived from fitting shapes within a larger shape, the tool aims to empower users—especially beginners and DIY enthusiasts—to give their garments a second life rather than discarding them. The final output could include links to downloadable patterns, estimated fabric yield, and styling suggestions based on the original garment. The crux of this project is connecting all of the pieces of this process, from image extraction, mesuring the relative size, finding the best pattern given the clothing item, and presenting it in a user-friendly manner.</p>
+              <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
 
-            <p class="pe-description">While this project is still in the initial stages, I am excited about combining all of these different elements to create a seamless process, promoting sustainability on an individual level. To see what stage the project is at, take a look at my <a target="_blank" class="github-embed" href="https://github.com/nurayyozden/Sewing-Pattern-Project">GitHub</a>!</p>
-            </p>
-<!-- 
-            <img src="uploads/test_shirt.jpg"></img>
-            <img src="uploads/test_shirt_after.jpg"></img> -->
+              <p class="pe-description">While this project is still in the initial stages, I am excited about combining all of these different elements to create a seamless process, promoting sustainability on an individual level. To see what stage the project is at, take a look at my <a target="_blank" class="github-embed" href="https://github.com/nurayyozden/Sewing-Pattern-Project">GitHub</a>!</p>
+              </p>
+
+              <div class="pe-images">
+
+                <img src="uploads/test_shirt.jpg"></img>
+                <h1>-></h1>
+                <img src="uploads/test_shirt_after.jpg"></img>
+
+              </div>
 
 
-          </div>
+        </div>
       </div>
 
 
