wording of grad school

--- a/garment-ai-project.html
+++ b/garment-ai-project.html
@@ -38,7 +38,7 @@
             <p class="pe-description">Mona and I collaborated to author the research paper titled <i>Developing Machine Learning Models to Predict Garment Fit Using 3D Simulation Software</i>. In this project, I was responsible for researching and discussing suitable machine learning models with Mona, writing the code for implementation in Python, cleaning and transforming the data, summarizing the results, and creating visualizations. It is currently awaiting submissions to conferences and/or journals.</p>
             <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
 
-            <p class="pe-description">Through this experience, I was able to refine my technical skills and understand how computer science can better our interactions and understanding of garments and fashion. It provided valuable insights into the future of AI in the fashion industry, and was a catalyst for my pursuit of a PhD at the intersection of computer science, fashion, and business.
+            <p class="pe-description">Through this experience, I was able to refine my technical skills and understand how computer science can better our interactions and understanding of garments and fashion. It provided valuable insights into the future of AI in the fashion industry, and was a catalyst for my pursuit of a graduate degree at the intersection of computer science, fashion, and sustainability.
             </p>
 
           </div>
